--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Triband</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_teste">testeActivity</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
